--- a/src/Redhotminute.Plugin.Specification/Redhotminute.Plugin.Specification.csproj
+++ b/src/Redhotminute.Plugin.Specification/Redhotminute.Plugin.Specification.csproj
@@ -13,6 +13,7 @@
     <PackageTags>Specification, Speficications, Specification pattern, Linq</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/Redhotminute/Redhotminute.Plugin.Specification</RepositoryUrl>
+    <IconUrl>https://github.com/Redhotminute/Redhotminute.Plugin.Specification/tree/develop/artwork/icon.png</IconUrl>
   </PropertyGroup>
 
   <ItemGroup>
